--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "cpy-cli": "^5.0.0",
+    "fs-extra": "^11.3.0",
     "gh-pages": "^6.3.0",
     "mkdirp": "^3.0.1",
     "rimraf": "^6.0.1"
